paper related changes.

--- a/paper/eacl/eacl2017.bib
+++ b/paper/eacl/eacl2017.bib
@@ -1,3 +1,22 @@
+@Inbook{Kumar2010,
+author="Kumar, Anil
+and Mittal, Vipul
+and Kulkarni, Amba",
+editor="Jha, Girish Nath",
+title="Sanskrit Compound Processor",
+bookTitle="Sanskrit Computational Linguistics: 4th International Symposium, New Delhi, India, December 10-12, 2010. Proceedings",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="57--69",
+isbn="978-3-642-17528-2",
+doi="10.1007/978-3-642-17528-2_5",
+url="http://dx.doi.org/10.1007/978-3-642-17528-2_5"
+}
+
+Pawan Goyal and Gérard Huet. Completeness Analysis of a Sanskrit Reader. Proceedings of the Fifth International Symposium on Sanskrit Computational Linguistics, Mumbai, January 2013. Available electronically as pdf. Final version in "Recent Researches in Sanskrit Computational Linguistics", Ed. Malhar Kulkarni and Chaitali Dangarikar, D.K. Printworld, 2013.
+
+
 @book{Aho:72,
     author  = {Alfred V. Aho and Jeffrey D. Ullman},
     title   = {The Theory of Parsing, Translation and Compiling},
